--- a/CommonTasks/CommonTasks.csproj
+++ b/CommonTasks/CommonTasks.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <Reference Include="System.Web">
-      <HintPath>..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Web.dll</HintPath>
+      <HintPath>..\..\..\Signature Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Web.dll</HintPath>
     </Reference>
   </ItemGroup>
 
